# devshell-init

./: README.md  default.nix  pyproject.toml
nix/: uv-workspace.nix  uv2nix.nix
src/devshell_init/: build_devshell.py  cli.py  cli_test.py
